<resources>
    <string name="app_name">PigeonUI</string>
    <string name="logo">Logo</string>
    <string name="logo_description">App logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="birthdate">Birthdate</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="choose_profile_image">Choose Profile Image</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome_title">Welcome to PigeonUI</string>
    <string name="search_box">Search in mail</string>
    <string name="open_menu">Open menu</string>
    <string name="compose">Compose</string>
    <string name="compose_new_mail">Compose new mail</string>
    <string name="inbox">Inbox</string>
    <string name="sent">Sent</string>
    <string name="spam">Spam</string>
    <string name="trash">Trash</string>
    <string name="drafts">Drafts</string>
    <string name="some_description">Some description</string>
    <string name="add_label">Create new</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="message">Compose email</string>
    <string name="from">From</string>
    <string name="send">Send</string>
    <string name="back">Back</string>
    <string name="user_example_com">user@example.com</string>
    <string name="mail_database">mail_database</string>
    <string name="save">Save</string>
    <string name="name_new_label">Name new label</string>
    <string name="cancel">Cancel</string>
    <string name="label_name">Label name</string>
    <string name="no_emails_found">No emails here!</string>
    <string name="close">Close</string>
    <string name="sign_out">Sign Out</string>
    <string name="mail_detail_title">Mail Details</string>
    <string name="error_mail_id_not_provided">Error: Mail ID not provided.</string>
    <string name="error_mail_id_not_available">Error: Mail ID not available to load details.</string>
    <string name="mail_not_found_or_deleted">Mail not found or has been deleted.</string>
    <string name="loading_mail_details">Loading mail details...</string>
    <string name="mail_not_found">Mail not found</string>
    <string name="no_subject">(No Subject)</string>
    <string name="unknown_sender">Unknown Sender</string>
    <string name="no_body_content">(No body content)</string>
    <string name="mark_as_unread">Mark Unread</string>
    <string name="mark_as_read">Mark Read</string>
    <string name="delete_permanently">Delete Permanently</string>
    <string name="delete">Delete</string>
    <string name="move_to">Move To</string>
    <string name="mail_details_not_loaded">Mail details not loaded.</string>
    <string name="mail_already_in_trash_or_permanent_delete_not_implemented">Mail is already in Trash or permanent delete is not available from here.</string>
    <string name="confirm_delete_title">Move to Trash?</string>
    <string name="confirm_delete_message">Are you sure you want to move this conversation to Trash?</string>
    <string name="delete_action_text">Move to Trash</string> <!-- Or just "Delete" if you prefer -->
    <string name="cannot_move_from_trash">Cannot move mail that is already in Trash using this option.</string>
    <string name="no_folders_available">No folders available to move to.</string>
    <string name="no_other_folders_to_move">There are no other folders to move this mail to.</string>
    <string name="move_to_folder_title">Move to folder</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="move_email">Move Email</string>
    <string name="delete_mail">Delete Mail</string>
    <string name="mark_unread">Mark Unread</string>
</resources>
