<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- HEADER BAR WITH BACK AND SEND BUTTONS -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingBottom="10dp"
        android:layout_marginStart="0dp">

        <!-- Back Button -->
        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/back"
            android:background="@drawable/button_background_selector"
            android:padding="0dp"
            android:layout_marginEnd="12dp"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <!-- Send Button -->
        <ImageButton
            android:id="@+id/btnSend"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_send"
            android:contentDescription="@string/send"
            android:background="@drawable/button_background_selector"
            android:padding="0dp" />
    </LinearLayout>


    <!-- FROM -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingBottom="8dp"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textColor="@color/colorOnSurface"
            android:textSize="16sp"
            android:labelFor="@id/tvFromValue"
            android:layout_marginEnd="12dp"/>

        <TextView
            android:id="@+id/tvFromValue"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/colorOnBackground"
            android:textSize="16sp"
            android:ellipsize="end"
            android:maxLines="1"/>
    </LinearLayout>

    <!-- Under Line -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray_background"
        android:layout_marginBottom="16dp" />

    <!-- TO -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingBottom="8dp">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textColor="@color/colorOnSurface"
            android:textSize="16sp"
            android:labelFor="@id/etTo"
            android:layout_marginEnd="12dp"/>

        <EditText
            android:id="@+id/etTo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="emailAddress"
            android:background="@null"
            android:inputType="textEmailAddress"
            android:padding="0dp"
            android:textColor="@color/colorOnBackground"
            android:textSize="16sp" />
    </LinearLayout>

    <!-- Under Line -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray_background"
        android:layout_marginBottom="16dp" />

    <!-- SUBJECT -->
    <EditText
        android:id="@+id/etSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subject"
        android:textColor="@color/colorOnBackground"
        android:textColorHint="@color/colorHintText"
        android:textSize="16sp"
        android:background="@null"
        android:inputType="text"
        android:autofillHints="username"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="8dp"/>


    <!-- Under Line -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray_background"
        android:layout_marginBottom="16dp" />

    <!-- BODY -->
    <EditText
        android:id="@+id/etBody"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:autofillHints="emailSubject"
        android:textColorHint="@color/colorHintText"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/compose_new_mail"
        android:inputType="textMultiLine"
        android:padding="0dp"
        android:textColor="@color/colorOnBackground"
        android:textSize="16sp" />

</LinearLayout>
