<?xml version="1.0" encoding="utf-8"?>
    <androidx.drawerlayout.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.mso.pigeonui.InboxFragment">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Top Bar -->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:translationZ="8dp"
                android:background="@color/colorBackground"
                android:padding="16dp">

                <!-- Search Box -->
                <EditText
                    android:id="@+id/etSearchBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_bg"
                    android:hint="@string/search_box"
                    android:inputType="text"
                    android:paddingStart="64dp"
                    android:paddingEnd="64dp"
                    android:padding="12dp"
                    android:autofillHints="search"
                    android:imeOptions="actionSearch"
                    android:textColor="@color/colorOnBackground"
                    android:textColorHint="@color/colorOnBackground" />

                <!-- Menu Button -->
                <ImageView
                    android:id="@+id/btnMenu"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="start|center_vertical"
                    android:layout_marginStart="12dp"
                    android:background="@drawable/menu_button_bg"
                    android:padding="8dp"
                    android:src="@drawable/ic_menu"
                    app:tint="@color/colorOnBackground"
                    android:contentDescription="@string/open_menu" />

                <!-- Profile Picture Button -->
                <ImageView
                    android:id="@+id/ivProfilePicture"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="12dp"
                    android:src="@drawable/ic_avatar"
                    android:scaleType="centerCrop"
                    android:background="@drawable/circle_background"
                    android:contentDescription="Profile Picture" />
            </FrameLayout>



            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                android:layout_marginTop="100dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">


                    <TextView
                        android:id="@+id/textViewEmptyList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no_emails_found"
                        android:gravity="center"
                        android:padding="16dp"
                        android:textSize="18sp"
                        android:visibility="gone"
                        tools:visibility="visible" />


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewInbox"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/list_item_mail" />

                </LinearLayout>
            </ScrollView>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                tools:visibility="visible"/>

            <!-- Compose Button -->
            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/btnCompose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="24dp"
                android:text="@string/compose"
                android:textColor="@color/yellow"
                android:contentDescription="@string/compose_new_mail"
                app:backgroundTint="@color/blue"
                app:icon="@drawable/ic_edit"
                app:iconTint="@color/yellow"
                app:iconPadding="8dp" />

            <!-- Dark Mode Button -->
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnToggleTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="24dp"
                android:contentDescription="Toggle Theme"
                app:backgroundTint="@color/blue"
                app:srcCompat="@drawable/ic_moon"
                app:tint="@null" />

    </FrameLayout>

        <!-- Left Menu -->
        <ScrollView
            android:id="@+id/navScrollView"
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/colorBackground"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/navDrawer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- The logo in the left menu -->
                <LinearLayout
                    android:id="@+id/logoLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="start"
                    android:paddingStart="8dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="4dp"
                    android:paddingEnd="8dp"
                    android:layout_marginBottom="0dp">

                    <ImageView
                        android:id="@+id/ivLogo"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/pigeon_logo"
                        android:contentDescription="@string/logo" />
                </LinearLayout>

                <!-- A Separate Line -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#CCCCCC"
                    android:layout_marginBottom="8dp" />

                <!-- Inbox Item -->
                <TextView
                    android:id="@+id/itemInbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:drawableStartCompat="@drawable/ic_inbox"
                    android:drawablePadding="12dp"
                    android:padding="12dp"
                    android:gravity="center_vertical"
                    android:text="@string/inbox"
                    android:textColor="@color/colorOnBackground"
                    android:background="@drawable/nav_item_bg"
                    android:clickable="true"
                    android:focusable="true"
                    android:textStyle="bold"/>

                <!-- Sent Item -->
                <TextView
                    android:id="@+id/itemSent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:drawableStartCompat="@drawable/ic_send"
                    android:drawablePadding="12dp"
                    android:padding="12dp"
                    android:gravity="center_vertical"
                    android:text="@string/sent"
                    android:textColor="@color/colorOnBackground"
                    android:background="@drawable/nav_item_bg"
                    android:clickable="true"
                    android:focusable="true"
                    android:textStyle="bold"/>

                <!-- Draft Item -->
                <TextView
                    android:id="@+id/itemDrafts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:drawableStartCompat="@drawable/ic_drafts"
                    android:drawablePadding="12dp"
                    android:padding="12dp"
                    android:gravity="center_vertical"
                    android:text="@string/drafts"
                    android:textColor="@color/colorOnBackground"
                    android:background="@drawable/nav_item_bg"
                    android:clickable="true"
                    android:focusable="true"
                    android:textStyle="bold"/>

                <!-- Spam Item -->
                <TextView
                    android:id="@+id/itemSpam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:drawableStartCompat="@drawable/ic_spam"
                    android:drawablePadding="12dp"
                    android:padding="12dp"
                    android:gravity="center_vertical"
                    android:text="@string/spam"
                    android:textColor="@color/colorOnBackground"
                    android:background="@drawable/nav_item_bg"
                    android:clickable="true"
                    android:focusable="true"
                    android:textStyle="bold"/>

                <!-- Trash Item -->
                <TextView
                    android:id="@+id/itemTrash"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:drawableStartCompat="@drawable/ic_trash"
                    android:drawablePadding="12dp"
                    android:padding="12dp"
                    android:gravity="center_vertical"
                    android:text="@string/trash"
                    android:textColor="@color/colorOnBackground"
                    android:background="@drawable/nav_item_bg"
                    android:clickable="true"
                    android:focusable="true"
                    android:textStyle="bold"/>

                <!-- A Separate Line -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#CCCCCC"
                    android:layout_marginBottom="8dp" />

                <!-- Add Label Button -->
                <TextView
                    android:id="@+id/itemAddLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:drawableStartCompat="@drawable/ic_plus"
                    android:drawablePadding="12dp"
                    android:padding="12dp"
                    android:gravity="center_vertical"
                    android:text="@string/add_label"
                    android:textColor="@color/colorOnBackground"
                    android:background="@drawable/nav_item_bg"
                    android:clickable="true"
                    android:focusable="true"
                    android:textStyle="bold"/>

                <!-- A Separate Line -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#CCCCCC"
                    android:layout_marginBottom="8dp" />

                <!-- The Layout Of Labels -->
                <LinearLayout
                    android:id="@+id/labelContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

            </LinearLayout>
        </ScrollView>
    </androidx.drawerlayout.widget.DrawerLayout>